basic functionality down

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           front-end, html, css, javascript, react, sqi">
         <title>Weather app</title>
         <link rel="stylesheet" href="./assets/style/index.css" media="all">
-        <script src="./assets/script/index.js" defer></script>
+        <script src="./assets/script/index.js" type="module"></script>
     </head>
     <body>
         <div class="card">
@@ -21,20 +21,20 @@
             </div>
             <div class="weather">
                 <img src="./assets/pictures/cloudy.png" class="weather-icon">
-                <h1 class="temp">22°C</h1>
-                <h2 class="city">New York</h2>
+                <h1 class="temp"></h1>
+                <h2 class="city"></h2>
                 <div class="details">
                     <div class="col">
                         <img src="./assets/pictures/humidity.png">
                         <div>
-                            <p class="humidity">50%</p>
+                            <p class="humidity"></p>
                             <p>Humidity</p>
                         </div>
                     </div>
                     <div class="col">
                         <img src="./assets/pictures/wind.png">
                         <div>
-                            <p class="wind">15 km/h</p>
+                            <p class="wind"></p>
                             <p>Wind Speed</p>
                         </div>
                     </div>
