--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button><img src="./assets/pictures/magnifying-glass-solid.svg"></button>
             </div>
             <div class="weather">
-                <img src="./assets/pictures/cloudy.png" class="weather-icon">
+                <img src="./assets/pictures/drizzle.png" class="weather-icon">
                 <h1 class="temp"></h1>
                 <h2 class="city"></h2>
                 <div class="details">
