--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="details">
+                    <div class="col">
+                        <div>
+                            <p class="feels-like"></p>
+                            <p>Feels Like</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
